  and ``false`` in lower case. Other values are not allowed any more and will
  result in a parsing exception.

- Store level throttling settings (``indices.store.throttle.*``) have been
  removed.

- The gateway recovery table setting ``recovery.initial_shards`` has been
  removed. Nodes will recover their unassigned local primary shards
  immediatelly after restart.

Changes
=======

- Added 'epoch' argument to the extract function which returns the number of
  seconds since Jan 1, 1970. For example:
  ``extract(epoch from '1970-01-01T00:00:01')`` returns ``1.0`` seconds.

- Add max_token_length parameter to whitespace tokenizer.

- Statistics for jobs and operations are enabled by default.  If you don't need
  any statistics, please set ``stats.enabled`` to ``false``.

- ``ALTER TABLE <name> OPEN`` will now wait for all shards to become active
  before returning to be consistent with the behaviour of other statements.

- CrateDB is now based on Elasticsearch 6.1.3 and Lucene 7.1.0.

- Added a new ``bengali`` language analyzer and a ``bengali_normalization``
  token filter.

- Added new ``cluster.routing.allocation.disk.watermark.flood_stage`` setting,
  that controls at which disk usage indices should become read-only to prevent
  running out of disk space. There is also a new node check that indicates
  whether the threshold is exceeded.

- Added new tokenizers ``simple_pattern`` and ``simple_pattern_split`` which
  allow to tokenize text for the fulltext index by a regular expression pattern.

- Changed ``BEGIN`` and ``SET SESSION`` to no longer require ``DQL``
  permissions on the ``CLUSTER`` level.

- Implemented a `Ready` node status JMX metric expressing if the node is ready
  for processing SQL statements.

Fixes
=====

- Fixed an issue that would cause queries and data manipulation statements with
  explicit ``WHERE`` conditions to throw ``NullPointerException`` when running
  against a table with a composite primary key.
